# octox

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
kernel/: bio.rs  console.rs  kalloc.rs  mpmc.rs  sync.rs  sysfile.rs  sysproc.rs  uart.rs  virtio_disk.rs  vm.rs
src/kernel/: bio.rs  broadcast.rs  buddy.rs  channel.rs  condvar.rs  console.rs  defs.rs  elf.rs  entry.rs  exec.rs  fcntl.rs  file.rs  fs.rs  kernelvec.rs  lazy.rs  lib.rs  log.rs  main.rs  memlayout.rs  mpmc.rs  param.rs  pipe.rs  printf.rs  proc.rs  riscv.rs  rwlock.rs  semaphore.rs  sleeplock.rs  spinlock.rs  start.rs  stat.rs  swtch.rs  sync.rs  syscall.rs  sysctbl.rs  sysfile.rs  trampoline.rs  trap.rs  virtio_disk.rs  vm.rs
src/mkfs/: Cargo.toml  main.rs
src/user/: Cargo.toml  initcode.rs  lib.rs  user.ld
user/: Cargo.toml
