[package]
name = "user"
version = "0.1.0"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2018"

[lib]
name = "ulib"
path = "lib.rs"

[[bin]]
name = "cat"
path = "cat.rs"

[[bin]]
name = "echo"
path = "echo.rs"

[[bin]]
name = "grep"
path = "grep.rs"

[[bin]]
name = "init"
path = "init.rs"

[[bin]]
name = "initcode"
path = "initcode.rs"

[[bin]]
name = "kill"
path = "kill.rs"

[[bin]]
name = "ln"
pathe = "ln.rs"

[[bin]]
name = "ls"
path = "ls.rs"

[[bin]]
name = "mkdir"
path = "mkdir.rs"

[[bin]]
name = "printf"
path = "printf.rs"

[[bin]]
name = "rm"
path = "rm.rs"

[[bin]]
name = "sh"
path = "sh.rs"

[[bin]]
name = "wc"
path = "wc.rs"

[dependencies]
